# anubis

./: .gitignore  LICENSE  README.md  anubis_db.json  app-config.properties  pyproject.toml  settings.gradle.kts
.github/workflows/: python-app.yml
anubis/: app.py  cli.py
anubis/adapters/: configurations.py  password.py  secrets.py
anubis/adapters/ui/: cli.py  gui.py
anubis/core/: encryption.py  errors.py  operations.py  password.py  secrets.py  shared.py
anubis/infrastructure/: configurations.py  secrets_adapters.py
app/: build.gradle.kts
app/src/androidTest/java/com/rodrigorar/anubis/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rodrigorar/anubis/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
app/src/main/java/com/rodrigorar/anubis/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/rodrigorar/anubis/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
olisipo/: cli.py  data.py  encryption.py  main.py  operations.py
olisipo-1.0.0/: PKG-INFO  pyproject.toml
olisipo-1.0.0/olisipo/: cli.py
olisipo-1.0.0/olisipo/core/: operations.py
olisipo/core/: data.py  encryption.py  operations.py  password.py  secrets.py  shared.py
test/: encryption_test.py  operations_test.py  password_test.py
