[tool.poetry]
name = "olisipo"
version = "1.1.0"
description = "Simple local password manager"
authors = ["rodrigoar <rodrigorar.dev@gmail.com>"]
license = "Apache License 2"
readme = "README.md"

[tool.poetry.scripts]
start="olisipo.cli:main"
test="pytest:main"
package="olisipo.bin.package_wrapper:main"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^43.0.1"
clipboard = "^0.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
